// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Json for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="control is-clearfix"
    >
      <textarea
        class="textarea"
      />
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Json for Resource.Form Empty 1 With required 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-right"
    >
      <textarea
        class="textarea is-danger"
        placeholder="An explicit placeholder"
      />
       
      <!---->
       
      <span
        class="icon is-right has-text-danger"
      >
        <i
          class="fa fa-exclamation-circle fa-lg"
        />
      </span>
       
      <!---->
    </div>
     
    <p
      class="help is-danger"
    >
      
                    fields.common.required
                    
      <!---->
    </p>
  </div>
</span>
`;

exports[`Field.Json for Resource.Form Empty 2 With required 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-right is-clearfix"
    >
      <textarea
        class="textarea is-info"
        placeholder="An explicit placeholder"
      />
       
      <!---->
       
      <span
        class="icon is-right has-text-info"
      >
        <i
          class="fa fa-info-circle fa-lg"
        />
      </span>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Json for Resource.Form Invalid With required 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-right"
    >
      <textarea
        class="textarea is-danger"
        placeholder="An explicit placeholder"
      />
       
      <!---->
       
      <span
        class="icon is-right has-text-danger"
      >
        <i
          class="fa fa-exclamation-circle fa-lg"
        />
      </span>
       
      <!---->
    </div>
     
    <p
      class="help is-danger"
    >
      
                    Json is invalid
                    
      <!---->
    </p>
  </div>
</span>
`;

exports[`Field.Json for Resource.Form With value, label, maxrow and placeholder 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-right"
    >
      <textarea
        class="textarea is-danger"
        placeholder="An explicit placeholder"
      />
       
      <!---->
       
      <span
        class="icon is-right has-text-danger"
      >
        <i
          class="fa fa-exclamation-circle fa-lg"
        />
      </span>
       
      <!---->
    </div>
     
    <p
      class="help is-danger"
    >
      
                    Json is invalid
                    
      <!---->
    </p>
  </div>
</span>
`;

exports[`Field.Json for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <pre
      style="width: 100%; background-color: white;"
    >
      {
  "entry1": "Entry 1",
  "entry2": "Entry 2"
}
    </pre>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Json for Resource.List Empty 1`] = `
<div>
  <pre
    style="width: 100%; background-color: white;"
  >
    
  </pre>
</div>
`;

exports[`Field.Json for Resource.List With value 1`] = `
<div>
  <pre
    style="width: 100%; background-color: white;"
  >
    {
  "entry1": "Entry 1",
  "entry2": "Entry 2"
}
  </pre>
</div>
`;

exports[`Field.Json for Resource.Thumbnail Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <pre
      style="width: 100%; background-color: white;"
    >
      
    </pre>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Json for Resource.Thumbnail With value 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <pre
      style="width: 100%; background-color: white;"
    >
      {
  "entry1": "Entry 1",
  "entry2": "Entry 2"
}
    </pre>
     
    <!---->
  </div>
</span>
`;
